# cs396_496

./: .gitignore  README.md  interface.py  main.py  pyproject.toml  requirements.txt
Bryan's supervised model/: hyperparameter_search.py  hyperparameter_search_2.py  hyperparameter_search_3.py  hyperparameter_search_fine_2.json
Bryan's supervised model/guitar-chord-demo/: .gitignore  README.md
Bryan's supervised model/guitar-chord-demo/backend/: README.md  app.py  class_mapping_2.json  class_mapping_final.json  requirements.txt
Bryan's supervised model/guitar-chord-demo/frontend/: README.md  package-lock.json  package.json
Bryan's supervised model/guitar-chord-demo/frontend/public/: index.html
Bryan's supervised model/guitar-chord-demo/frontend/src/: App.css  App.jsx  index.css
Bryan's supervised model/guitar-chord-demo/frontend/src/components/: CameraRecorder.css  CameraRecorder.jsx  ChordOverlay.css  ChordOverlay.jsx  ProbabilitiesPanel.css  ProbabilitiesPanel.jsx  VideoPlayer.css  VideoPlayer.jsx
Bryan's supervised model/live-guitar-chord-demo/: README.md  live_chord_recognition.py  requirements.txt
classifier/: chord_head.py
model/: dino.py  sam3.py  vjepa2.py
serve/: classsify.py  interface.py
train/: train.py
