[project]
name = "GenreClassifier"

version = "0.1.2"
description = "uv for reproducibility"
readme = "README.md"

requires-python = ">=3.10"
dependencies = ['torch',
'torchvision',
'wandb',
'hydra-core',
'pyyaml',
'omegaconf',
'colorama',
'tqdm',
'opencv-python',
'matplotlib',
'lightning',
'click',
'moviepy',
'imageio',
'einops',
'wandb-osh',
'safetensors',
'trio'
]

# Optional dependency args, use for things like --no-build-isolation
[project.optional.dependencies]
[tool.uv]
[tool.uv.extra-build-dependencies]
[tool.uv.extra-build-variables]